--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,51 @@
 body{
-    background-color: black;
-    color: white;
+    background-color: aqua;
+    color: black;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: large;
-    
+    transition: all 0.6s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 90vh;
 }
 
 /*velocidade*/
 
 .speed{
-    width: 50vw;
+    width: 30vw;
     display: flex;
-    justify-content: space-evenly;
-    margin: 0 auto;
+    justify-content: space-around;
+    margin : 0 auto
+    
 }
 select, option{
+    border-radius: 2em;
     background-color:black;
     color: white;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: large;
 }
+/*mario*/
+.marioimg{
+    display: none;
+}
 
 /*cronometro*/
 .wrapper{
+    transition: all 2s;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 90vh;
 }
 h1{
-    color: aqua;
+    color: black;
+    transition: all 0.8s;
 }
 /*Botoes*/
 
@@ -42,6 +54,7 @@ div .botoes{
     flex-direction: row;
     justify-content: space-evenly;
     width: 40vw;
+    
     
 }
 
@@ -55,6 +68,7 @@ button{
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: large;
+    border-radius: 2em;
 }
 
 .start-btn{
